<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/camera_opt"
        android:title="@string/camera_opt"
        android:icon="@drawable/baseline_camera_alt_24"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/search_opt"
        android:title="@string/search_opt"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:title="@string/newGroup_opt"
        app:showAsAction="collapseActionView"/>

    <item
        android:title="@string/newBroadcast_opt"
        app:showAsAction="collapseActionView"/>

    <item
        android:title="@string/linkedDevices_opt"
        app:showAsAction="collapseActionView"/>

    <item
        android:title="@string/payment_opt"
        app:showAsAction="collapseActionView"/>

    <item
        android:title="@string/setting_opt"
        app:showAsAction="collapseActionView"/>

</menu>